--- a/index.html
+++ b/index.html
@@ -3,22 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mempool Mentor - AI Gas Optimization for Flare Network</title>
+    <title>Gas-Guard - AI Gas Optimization for Flare Network</title>
     <meta name="description" content="Never overpay for gas again. AI-powered gas optimization copilot with on-chain protection using FTSOv2, FDC, and Smart Accounts on Flare Network." />
-    <meta name="author" content="Mempool Mentor" />
+    <meta name="author" content="Gas-Guard" />
     <meta name="keywords" content="Flare Network, gas optimization, FTSOv2, FDC, blockchain, DeFi, smart contracts, GasGuard" />
 
-    <meta property="og:title" content="Mempool Mentor - AI Gas Optimization for Flare" />
+    <meta property="og:title" content="Gas-Guard - AI Gas Optimization for Flare" />
     <meta property="og:description" content="Never overpay for gas again. AI-powered copilot with on-chain protection." />
     <meta property="og:type" content="website" />
 
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Mempool Mentor - AI Gas Optimization" />
+    <meta name="twitter:title" content="Gas-Guard - AI Gas Optimization" />
     <meta name="twitter:description" content="Never overpay for gas again. AI-powered copilot for Flare Network." />
 
 
-    <link rel="canonical" href="https://mempool-mentor.app" />
+    <link rel="canonical" href="https://gas-guard.app" />
   </head>
 
   <body>
